tolk-tester/tests/invalid-declaration/err-1480.tolk

enum C3 : int {
}

/**
@compilation_should_fail
@stderr serialization type of `enum` must be intN: `int8` / `uint32` / etc.
 */
